# cppForCProgrammers

./: CMakeLists.txt  README.md  a.out  main.cpp  sum.cpp  sum.h
include/: graph.h  math.h  point.h  sum.h  utils.h
src/: graph.cpp  main.c  main.cpp  math.cpp  point.cpp  sum.cpp
